tests/NormalTests/paczka1/small_fuzzy/15015799.err
Error in line 2: NVsuBXtk S802 31,1
Error in line 7: Eglzb A478 89,8
